cmake_minimum_required(VERSION 3.12)
project(muse)

#SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DMY_DEBUG")
add_subdirectory(source)
add_subdirectory(test)
include_directories(include source)
if (UNIX)
    if (APPLE)
        link_directories(lib/mac)
    else ()
        link_directories(lib/linux)
    endif (APPLE)
endif (UNIX)
add_executable(muse main.cpp)
target_link_libraries(muse ats)
configure_file(config.json config.json COPYONLY)
configure_file(config_release.json config_release.json COPYONLY)
configure_file(aivwap.pt aivwap.pt COPYONLY)
